<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.umangpatel.smarthealth.DiseaseActivity"
    tools:showIn="@layout/activity_disease">

    <TextView
        android:id="@+id/diseaseName"
        android:textSize="30sp"
        android:layout_marginTop="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/symptoms"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/diseaseSymptoms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/overview"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/diseaseOverview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/expectations"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/diseaseExpectations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/risk_factors"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/diseaseRiskFactors"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/treatment"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/diseaseTreatment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/self_care"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/diseaseSelfCare"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/made_worse_by"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/diseaseMadeWorseBy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>

    </ScrollView>
