<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/doctorImageView"
        android:layout_width="130dp"
        android:layout_height="100dp"
        android:contentDescription="@string/doctor_des"
        android:scaleType="centerCrop"
        android:src="@drawable/plussign" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/doctorNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/doctorname"
            android:textColor="@color/colorPrimary"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/specialtyTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/doctorNameTextView"
            android:text="@string/speciality"
            android:textStyle="italic" />
    </LinearLayout>

</LinearLayout>