<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AilmentDetailFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">


        <TextView
            android:id="@+id/ailmentTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:text="@string/ailmenttitle"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/colorAccent"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/firstNoticedTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:text="@string/firstnoticed"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/material_grey_850"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/dateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/date"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/material_grey_850"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/ailmentNotesTextView"
            android:layout_width="fill_parent"
            android:layout_height="350dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:layout_weight="0.43"
            android:padding="10dp"
            android:text="@string/ailmentnotes"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/material_grey_850"
            android:textSize="34sp" />
    </LinearLayout>
</RelativeLayout>